# django-admin-two-factor-auth

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
admin_two_factor/: admin.py  apps.py  models.py  settings.py  urls.py  utils.py  views.py
admin_two_factor/context_processors/: two_factor.py
admin_two_factor/migrations/: 0001_initial.py
admin_two_factor/static/two_step_assets/js/: verification.js
admin_two_factor/templates/admin/: base.html  login.html
admin_two_factor/templates/two_step_verification/admin/: qrcode.html
docs/: index.rst  installation.rst  requirements.rst  run-and-demo.rst
