[metadata]
name = django-admin-two-factor
version = 0.1
description = Django Admin Two Factor Authentication.
long_description = file: README.md
url = https://github.com/imankarimi/django-admin-two-factor-auth
author = Iman Karimi
author_email = imankarimi.mail@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.*
    Framework :: Django :: 3.1.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Environment :: Web Environment
    Topic :: Software Development
    Topic :: System :: Systems Administration :: Authentication/Directory

[options]
include_package_data = true
packages = find: